# OpenGL

./: CMakeLists.txt  OpenGL.sln  README.md
OpenGL/: OpenGL.vcxproj
OpenGL/src/: Application.cpp
shader/: frag.glsl  vert.glsl
src/: main.cpp  shader.cpp  shader.h
